# alerts

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  clickhouse_init.sql  config.toml  create_database.sql  docker-build.sh  docker-compose.init.yml  docker-compose.yml  init.sql  t  test_alerts.jsonl  threat_event_tables.sql
docker/: docker-compose.clickhouse.yml  docker-compose.kafka.yml  docker-compose.neo4j.yml  docker-compose.pg.yml
docs/: graph_schema.md  neo4j_setup_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/api/: graphApi.js
frontend/src/components/: AlertAnalysis.jsx  AlertAnnotation.jsx  AlertData.jsx  AlertGraph.jsx  (+20 more)
gaojing/: index.html  总览模式.html  标注模式.html
gaojing/extra/: TAG_OSZMqjWKBSmMhWQGfRzukHMiGg420250722T01_20250722T011347067Z  data.0.js  data.1.js  data.2.js
gaojing/mb-proto2/: 4.6cqwy-vendor-653ee4af6e2e7baf4f17.js  4.n9fxu-vendor-c6d8b49a4bdcf3c95aeb.js  5.3nfpa-vendor-e513e6a45c0f8ba97881.js  lazy-lib-dl-ef4a8eb58075f96842b2.js  lazy-lib-fontkit-94d1920236ee8aff3185.js  lazy-lib-i18n-5041cfa2a12106f1676b.js  lazy-lib-paper-5a9908939d850d4cae67.js  lazy-lib-rehype-013772de7c49f3c667fa.js  preview-html-zip-e489d8ea38c70f0e7cdf.js
scripts/: generate_test_data.py  start_neo4j.sh
src/: alert.rs  auth.rs  clickhouse.rs  clickhouse_api.rs  consumer_service.rs  database.rs  edr_alert.rs  graph_api.rs  graph_db.rs  graph_memory.rs  lib.rs  main.rs  neo4j_client.rs  ngav_alert.rs
src/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
(+8 files in other folders)
