[package]
name = "alerts"
version = "0.1.0"
edition = "2024"


[dependencies]
rdkafka = { version = "0.35", features = ["cmake-build"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tempfile = "3.0"
