[package]
name = "alerts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kafka-sender"
path = "src/bin/kafka_sender.rs"


[[bin]]
name = "kafka-consumer"
path = "src/bin/kafka_consumer.rs"

[[bin]]
name = "web-server"
path = "src/bin/web_server.rs"

[[bin]]
name = "hash-password"
path = "src/bin/hash_password.rs"

[dependencies]
rdkafka = { version = "0.35", features = ["cmake-build"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clickhouse = { version = "0.13", features = ["rustls-tls", "uuid", "chrono"] }
bcrypt = "0.15"
